# agora-core

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
agora/: __init__.py
agora/agents/: __init__.py  base.py
agora/agents/crits/: __init__.py  analyzer.py  global_crit.py  local_crit.py
agora/constitution/: __init__.py  decision_logger.py  decision_validator.py
agora/governance/: __init__.py  governance_layer.py  hitl_escalation.py  operation_classifier.py  operation_trust.py  precedent_db.py  voting.py
agora_core.egg-info/: PKG-INFO  SOURCES.txt
examples/: quickstart.py
tests/: test_voting.py
