[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agora-core"
version = "0.1.0"
description = "Multi-Agent governance framework — voting, veto, precedent, and risk classification"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    {name = "lawcontinue", email = "411947628@qq.com"},
]
keywords = ["multi-agent", "governance", "voting", "veto", "precedent", "ai-agents", "safety"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "build", "twine"]

[project.urls]
Homepage = "https://github.com/lawcontinue/agora-core"
Repository = "https://github.com/lawcontinue/agora-core"
Issues = "https://github.com/lawcontinue/agora-core/issues"

[tool.setuptools.packages.find]
include = ["agora*"]
